--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1> Hello I'm Jasdev </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Page</title>
+    <style>
+        html{
+            background-color: #FFBE98;
+        }
+
+        img{
+            height: 200px;
+        }
+        h1{
+            color: #F05A7E;
+            text-align: center;
+            background-color: #125B9A;
+        }
+        p{
+            color: #0B8494;
+            text-align: justify;
+        }
+    </style>
+</head>
+<body>
+    <h1> Hello I'm Jasdev </h1>
+    <p>I am just winging it, I hope to learn more about web development and learn more from Prof Kyong </p>
+    <img src="images/justin2.jpg" alt="JB">
+    <p>I am not JB!</p>
+    <img src="images/shitpic.jpg" alt="">
+        
+</body>
+</html>
